--- a/src/app/components/dashboard/finanzas/caja/caja-corte-list/caja-corte-list.component.html
+++ b/src/app/components/dashboard/finanzas/caja/caja-corte-list/caja-corte-list.component.html
@@ -29,6 +29,7 @@
             <th>Monto </th>
             <th>Empleado </th>
             <th></th>
+            <th>Detallado</th>
             
         </tr>
     </ng-template>
@@ -39,13 +40,16 @@
             <td>{{corte.corteCajaDetalle[0].monto}}</td>
             <td>{{corte.empleado.nombre}} {{corte.empleado.apellido}}</td>
             <td>
-                <button pButton pRipple icon="pi pi-search"class="p-button-rounded p-button-success mr-2" (click)="detalleCorte(corte.id)"></button>
+                <button pButton pRipple icon="pi pi-search"class="p-button-rounded p-button-success mr-2" (click)="detalleCorte(corte.id)"></button>                
+            </td>
+            <td>
+                <p-checkbox [value]="corte.id" [(ngModel)]="detalle"></p-checkbox>
             </td>
         </tr>
     </ng-template>
     <ng-template pTemplate="emptymessage">
         <tr>
-            <td colspan="5">Seleccione las fechas.</td>
+            <td colspan="6">Seleccione las fechas.</td>
         </tr>
     </ng-template>
 </p-table>
